# projetaudio

./: .coverage  .gitignore  ALTERNATIVE_DATASETS.md  AUDIO_TEST_SOURCES.md  BUGFIX_SAMPLING_RATE.md  CHANGELOG.md  EXCEPTIONAL_UPGRADE.md  FINAL_REPORT.md  GUIDE_TEST.txt  QUICKSTART.md  README.md  README_FINAL.md  README_NEW.md  SUMMARY.txt  SUMMARY_IMPROVEMENTS.md  TEST_DEMO.py  TEST_GUIDE.md  analyze_accuracy.py  api.py  app.py  app_exceptional.py  config.py  create_test_phrases.py  demo_improvements.py  download_ravdess.py  download_tess.sh  download_test_audios.py  evaluate.py  generate_test_audio.ps1  inference.py  launch.sh  main.py  pyproject.toml  requirements.txt  run.sh  test_real_audio.py  train.py  train_advanced.py  training_log.txt
configs/: config.yaml
speech_emotion_recognition.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: augmentation.py  dataset.py  ensemble.py  features.py  model.py  model_advanced.py  realtime.py  tracking.py  utils.py  wav2vec2_emotion.py  wav2vec2_model.py
test_audios/: PHRASES_TEST.txt  README.txt
tests/: test_features.py
